# tardigrade_micromorphic_element

./: .gitignore  CMakeLists.txt  environment.txt  reduced_environment.txt
.github/workflows/: github-test.yml
docs/doxygen/: Doxyfile.in
docs/sphinx/: changelog.rst
recipe/: meta.yaml
src/abaqus/: hex8_linear_elasticity.inp
src/cmake/: Config.cmake.in  GetVersionFromGitTag.cmake
src/cpp/: CMakeLists.txt  balance_equations.cpp  balance_equations.h  makefile_libmicrobalance  makefile_libmicromat  micromorphic_material_library.cpp  micromorphic_material_library.h  tardigrade_micromorphic_elasto_plasticity_interface.cpp  tardigrade_micromorphic_elasto_plasticity_interface.h  tardigrade_micromorphic_linear_elasticity_interface.cpp  tardigrade_micromorphic_linear_elasticity_interface.h
src/cpp/tests/: CMakeLists.txt  test_balance_equations.cpp  test_tardigrade_micromorphic_elasto_plasticity_interface.cpp  test_tardigrade_micromorphic_linear_elasticity_interface.cpp
src/python/: materials.pyx  setup.py
